[package]
name = "solana-net-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Low-latency network primitives for Solana: kernel-bypass packet capture (AF_XDP/DPDK), hardware tail-drop, and SIMD validator filtering."
repository = "https://github.com/serg44-sys/solana-net-core"
keywords = ["solana", "dpdk", "af-xdp", "low-latency", "avx512"]
categories = ["network-programming", "hardware-support"]
readme = "README.md"

[dependencies]
# Optional hardware-specific dependencies, active only under respective features
xsk-rs = { version = "0.3.0", optional = true }
ringbuf = { version = "0.3.3", optional = true }
core_affinity = { version = "0.8", optional = true }

[dev-dependencies]
# For reproducible benchmarks (grant milestone proofs).
# criterion = "0.5"  # uncomment when adding benches/ with a criterion harness

[features]
default = []

# Enabling 'afxdp' pulls in the required kernel-bypass dependencies
afxdp = ["dep:xsk-rs", "dep:ringbuf", "dep:core_affinity"]

# Gated for future DPDK refactoring (Milestone 1)
dpdk = []

[[bench]]
name = "whitelist_bench"
harness = false
# benches/whitelist_bench.rs — criterion harness with confidence intervals.
# Currently utilizing the built-in rdtsc test in src/whitelist.rs (see README).
