[package]
name = "solana-net-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Low-latency network primitives for Solana: kernel-bypass packet capture (AF_XDP/DPDK), hardware tail-drop, and SIMD validator filtering."
repository = "https://github.com/vitos1453/solana-net-core"
keywords = ["solana", "dpdk", "af-xdp", "low-latency", "avx512"]
categories = ["network-programming", "hardware-support"]
readme = "README.md"

[dependencies]
xsk-rs = { version = "0.8", optional = true }
ringbuf = { version = "0.4.4", optional = true }
core_affinity = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }
anyhow = { version = "1.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }

[features]
default = []
afxdp = ["dep:xsk-rs", "dep:ringbuf", "dep:core_affinity", "dep:tracing", "dep:anyhow", "dep:libc"]
dpdk = []

[patch.crates-io]
xsk-rs = { git = "https://github.com/vitos1453/xsk-rs", branch = "master" }

[[bench]]
name = "whitelist_bench"
harness = false
